# atl-wiki-link

./: .gitignore  Dockerfile.api  Dockerfile.bot  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
api/: __init__.py  app.py  pyproject.toml
bot/: __init__.py  bot.py  main.py  pyproject.toml
bot/commands/: linker.py  verification.py
bot/core/: config.py  database.py  embeds.py  logger.py  pagination.py  tasks.py  verification.py
