[tool.poetry]
name = "atl-wiki-bot"
version = "0.1.0"
description = "ATL Wiki Bot Monorepo - Discord Bot and Flask API for MediaWiki Verification"
authors = ["All Things Linux"]
readme = "README.md"
packages = [{ include = "api" }, { include = "bot" }]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
requests-oauthlib = "^2.0.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
asyncio = "^3.4.3"
discord-py = "^2.5.2"
jwt = "^1.3.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

[tool.poetry.group.types.dependencies]
types-flask = "^1.1.6"
types-jwt = "^0.1.3"
types-requests-oauthlib = "^2.0.0.20250516"

[tool.poetry.scripts]
# Entry points will be handled by running modules directly
# Use: python -m bot.main or python -m api.app
