[tool.poetry]
name = "mediawiki-api"
version = "0.1.0"
description = "Flask API for Discord MediaWiki Verification"
authors = ["All Things Linux"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
python-dotenv = "^1.0.0"
requests-oauthlib = "^2.0.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
